--- a/likewin11UI-login.html
+++ b/likewin11UI-login.html
@@ -16,7 +16,7 @@
             <img src="./tupian/Geography-01.png" alt="DQY Icon" class="DQY">
             <h3>Login</h3>
             <h2>Welcome Back!</h2>
-            <form action="login.php" method="post">
+            <form action="./php/login.php" method="post">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <!-- 验证码输入框和验证码图片 -->
